@@ -1,3 +1,5 @@
+2006/8/16 -- released version 20060816_trunk
+
 * Allow several Mailservers to be specified in Mailhost
 * Reduce timeout for Net::SMTP to 5 seconds.
 2006/8/15 -- released version 20060815_trunk
